Fix footer button on mobile

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -713,6 +713,11 @@ a {
 
 @media (max-width: 480px)  {
 
+	.secondary_button {
+		font-size: 1rem;
+		width: 160px;
+	}
+
 	.feed-image {
 		width: 91px;
 		height: 91px;
